# library_api

./: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  readme.md
nginx/: nginx.conf
nginx/configs/: site.conf
src/api/v1/: endpoints.py
src/core/: config.py  logger.py
src/db/: base.py  init_db.py  session.py
src/helpers/: http_client.py  time_utils.py
src/models/: books.py  models.py
src/schemas/: book.py  response.py
src/service/: service.py
tests/: .env.test  Dockerfile  conftest.py  requirements.txt  test.py  tests.py  unit.py
